feat(backend): partially implement gaming
